--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,10 @@
-
+body{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
 
 .carousel {
     max-width: 600px;
